Fix note editor long content overflow (#69)

--- a/src/stylesheets/components/ui/_editor.scss
+++ b/src/stylesheets/components/ui/_editor.scss
@@ -30,6 +30,9 @@
 				font-size: var(--font-size);
 
 				.primary-editor {
+					// Need this for wide image/math nodes otherwise content overflows
+					// TODO: Replace with stretch after updating to fx146
+					width: -moz-available;
 					max-width: var(--editor-max-width);
 					min-width: min(100%, var(--editor-max-width));
 					align-self: center;
